--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <footer class="ad">
         <div class="name">
-            <span id="watermark">created by @alexpunderwood</span>
+            <span id="watermark">created by <a id="tweet" href="https://twitter.com/alexpunderwood">@alexpunderwood</a></span>
         </div>
     </footer>
     <script type="text/javascript" src="app.js"></script>
